# ultraviolet-lang

./: .gitignore  .gitmodules  Cargo.toml  README.md  build_submodules.sh  flake.nix  rustfmt.toml
.cargo/: config.toml
.github/workflows/: build.yaml  ci.yml
crates/backend/: Cargo.toml
crates/backend/src/: ffi.rs  lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: help.rs  main.rs
crates/cli/tests/: golden.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/frontend/: Cargo.toml
crates/frontend/src/: iterator.rs  (+1 more)
examples/: fibonacci.uv  file copy.uv  file.uv  upcoming.uv
examples/dll/: simple.uv
tests/cases/: comparison.uv  conditional_false_branch.uv  conditional_nested_if.uv  conditional_true_branch.uv  div.uv  equality.uv  err_references_not_enough_life.out  err_references_not_enough_life.uv  function_simple_call.uv  function_two_args.uv  local_scope.uv  logical_boolean.uv  loops_count_to_five.uv  loops_simple_for.uv  loops_step_for.uv  loops_step_for_float.out  loops_step_for_float.uv  math_nested.uv  math_numbers.out  math_sub.uv  mod.uv  module_import.uv  module_imports_alias.uv  mul.uv  namespace.uv  namespace_function_access.uv  namespace_function_uses_namespace_variable.uv  namespace_mod.uv  namespace_shadowing.uv  namespace_simple_access.uv  namespaces_nested_access.uv  numbers.uv  print.out  print.uv  println.out  println.uv  reference_lifetimes.out  reference_lifetimes.uv  references_basic.uv  references_conditional_refs.out  (+3 more)
uvmodules/dlls/: mod.uv
uvmodules/math/: mod.uv
uvmodules/std/: mod.uv
uvmodules/test/: mod.uv
(+71 files in other folders)
