[package]
name = "ultraviolet-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
frontend = { path = "../frontend" }
backend  = { path = "../backend" }
ultraviolet-core = { path = "../core" }

[dev-dependencies]
assert_cmd = "2"
pretty_assertions = "1"
colored = "3.0.0"